--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18"
+  },
+  "devDependencies": {
+    "standard": "^17.1.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
